Address SonarCloud warnings for extent configurability